# identity-access-service

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260330_0001_initial_schema.py  20260330_0002_add_login_lockout_fields.py
app/: __init__.py  main.py
app/api/dependencies/: auth.py
app/api/v1/: router.py
app/api/v1/endpoints/: audit.py  auth.py  health.py  rbac.py  tenants.py  users.py
app/core/: config.py  errors.py  principal.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/management/: __init__.py  seed_system_admin.py
app/models/: __init__.py  audit_log.py  enums.py  refresh_token.py  tenant.py  user.py
app/schemas/: __init__.py  audit.py  auth.py  errors.py  health.py  rbac.py  tenants.py  users.py
app/services/: audit.py  auth.py  bootstrap.py  health.py  rbac.py  tenants.py  users.py
docs/: execution-plan.md  prd.md
scripts/: demo.sh
tests/: conftest.py  helpers.py  test_audit.py  test_auth.py  test_bootstrap.py  test_health.py  test_rate_limit.py  test_rbac.py  test_tenants.py  test_users.py
